# multiagent-ai-backend

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: .secret_key  main.py
app/ai/agents/: __init__.py  base.py  domain.py  intent.py  specialized.py
app/ai/graph/: __init__.py  orchestrator.py
app/ai/llm/: __init__.py  service.py
app/ai/memory/: conversation.py
app/ai/prompts/: templates.py
app/ai/rag/: __init__.py  bm25.py  chunker.py  compressor.py  embeddings.py  hybrid.py  loader.py  reranker.py  vector_store.py
app/api/v1/routes/: health.py
app/core/: config.py  exceptions.py  logging.py
app/database/: mongodb.py
app/database/models/: __init__.py  agent_log.py  analytics.py  chat_session.py  document.py  feedback.py  message.py  ticket.py  user.py
app/middleware/: request_logger.py
app/modules/admin/: router.py  schema.py  service.py
app/modules/analytics/: router.py  schema.py  service.py
app/modules/auth/: dependencies.py  repository.py  router.py  schema.py  service.py
app/modules/chat/: repository.py  router.py  schema.py  service.py
app/modules/knowledge_base/: router.py  schema.py  service.py
app/schemas/: __init__.py  response.py
app/shared/security/: jwt.py
app/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py
app/websocket/: handler.py
data/vector_store/: faiss.index  metadata.pkl
scripts/: generate_kb.py
